test/classes/ferguson/generic-inherit-record-no-parent-methods.good
generic-inherit-record-no-parent-methods.chpl:13: error: inheritance is not currently supported for records
